# discord-bot-einar

./: .gitignore  Cargo.toml  README.md  Settings.sample.yml  Settings.yaml
data/: Cargo.toml
data/src/: lib.rs  rss.rs
src/: date_time.rs  main.rs  rss.rs  settings.rs
